test/Preprocessor/missing-system-header.h
begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
begin_pragma
pragma|#
directive|pragma
name|clang
name|system_header
end_pragma

begin_include
include|#
directive|include
file|"not exist"
end_include

begin_comment
comment|// expected-error {{file not found}}
end_comment

end_unit

